--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,34 @@
-name:Portfolio Deployment
-
+    
+name: Portfolio Deployment
 
 on:
   push:
     branches:
-    -main
+      - main
 
 jobs:
   build-deploy:
-    runs-on:ubuntu-latest
+    runs-on: ubuntu-latest
     
     steps:
-    -name:Checkout source code
-     uses:actions/checkout@v3
+    - name: Checkout source code
+      uses: actions/checkout@v3
 
-     -name:Setup Node js
-      uses:actions/setup-node@v3
-      with:node-version:'21'
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '21'
 
-      -name:install dependencies
-       run:npm i
+    - name: Install dependencies
+      run: npm install
 
-       -name build
-       run:npm run build
+    - name: Build
+      run: npm run build
 
-       -name:Deploy to s3
-       run: aws s3 sync ./build s3://$S3_BUCKET_NAME --delete
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-    
+    - name: Deploy to S3
+      run: aws s3 sync ./build s3://$S3_BUCKET_NAME --delete
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
