--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       run: npm run build
 
     - name: Deploy to S3
-      run: aws s3 sync ./build s3://$S3_BUCKET_NAME --delete
+      run: aws s3 sync ./build s3://${{secrets.S3_BUCKET_NAME}} --delete
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
